--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.11.0",
     "framer-motion": "^11.2.4",
     "googleapis": "^140.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
@@ -23,8 +25,10 @@
     "react-player": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "scripts": "^0.1.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
